Add a few requests.

--- a/static/index.html
+++ b/static/index.html
@@ -16,19 +16,22 @@
 
   <main>
     <div class="container">
-      <h1>Check requests with different codes</h1>
-  
-      <p>It's possible, i'll inject requests' information inside this block.</p>
+      <h1>Requests</h1>
 
       <ul>
         <li><button id="code302" type="button">Get 302 code!</button>
         </li>
 
         <li><button id="code401" type="button">Get 401 code!</button></li>
+
+        <li><button id="show-user-agent" type="button">Show <code>User-Agent</code> header!</button></li>
+
+        <li><button id="check-blog" type="button">Check blog!</button></li>
+        <li><button id="check-t2-layout" type="button">Check tele2 article layout!</button></li>
       </ul>
 
       <section>
-        <h2>Request results</h2>
+        <h2>Requests' results</h2>
 
         <button id="clearListButton">Clear requests list</button>
 
