Make an iframe test page.

--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,8 @@
       <p>
         Go to <a href="/redirect/tele2">Tele2</a> site
       </p>
+
+      <iframe src="/test" data-url="/" frameborder="0"></iframe>
     </div>
   </main>
 
