--- a/static/index.html
+++ b/static/index.html
@@ -54,5 +54,6 @@
 
   <script defer src="axios/dist/axios.min.js"></script>
   <script defer src="static/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
 </body>
 </html>
